--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -1301,6 +1301,7 @@
     <None Include="bin\Immersion\assets\game\recipes\smithing\spear.json" />
     <None Include="bin\Immersion\assets\game\shaders\progressbar.fsh" />
     <None Include="bin\Immersion\assets\game\shapes\block\basic\giantreeds-free.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\basic\liquid.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\basic\stairs-lowered.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\basic\stairs.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\bowlstamp.json" />
@@ -1316,12 +1317,35 @@
     <None Include="bin\Immersion\assets\game\shapes\block\clay\crock\label-pumpkin.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\crock\label-soybean.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\crock\label-turnip.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\mutton\large-mutton.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\mutton\medium-mutton.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\mutton\small-mutton.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\large-pemmican1.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\large-pemmican2.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\large-pemmican3.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\large-pemmican4.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\medium-pemmican1.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\medium-pemmican2.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\medium-pemmican3.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\medium-pemmican4.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\small-pemmican1.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\small-pemmican2.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\small-pemmican3.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\pemmican\small-pemmican4.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\porkchops\large-porkchops.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\porkchops\medium-porkchops.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\porkchops\small-porkchops.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\redmeat\large-redmeat.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\redmeat\medium-redmeat.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\food-bowl\redmeat\small-redmeat.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\bowlstampmold.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\claycandlemold.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\glasslanternmold.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\hingesmold.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\ingotstampmold.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\lanternbasetopmold.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\lanternsidesmold.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\metalsheetmold.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\slaughteringaxemold.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\mold\toolpinmold.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\clay\pot-closed.json" />
@@ -1330,6 +1354,7 @@
     <None Include="bin\Immersion\assets\game\shapes\block\clay\storagevessel.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\ingotstamp.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\lightsources\glass-lantern.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\lightsources\locust-cage.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\lightsources\tallow\tallowbunch.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\lightsources\tallow\tallowcandle1.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\lightsources\tallow\tallowcandle2.json" />
@@ -1339,6 +1364,7 @@
     <None Include="bin\Immersion\assets\game\shapes\block\metal\candlemoldwick.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\metal\glasslanternframe.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\metal\ingotpile.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\metal\ironbloompile.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\metal\lantern\ceiling.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\metal\lantern\ground.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\metal\lantern\lantern-base-candle-sides.json" />
@@ -1393,6 +1419,10 @@
     <None Include="bin\Immersion\assets\game\shapes\block\staircorners\stairs-lowered-cornerinside.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\stone\well.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\stone\wellpipe.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\wood\bonfire\extinct.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\wood\bonfire\lit-2.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\wood\bonfire\lit.json" />
+    <None Include="bin\Immersion\assets\game\shapes\block\wood\bucket\empty.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\wood\choppingblock.json" />
     <None Include="bin\Immersion\assets\game\shapes\block\wood\dryingtray.json" />
     <None Include="bin\Immersion\assets\game\shapes\entity\air\butterfly.json" />
@@ -1686,6 +1716,11 @@
     <None Include="bin\Immersion\assets\immersion\blocktypes\crackedblocks\crackedbrick.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\crackedblocks\crackedrock.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\crackedblocks\crackedrockpolished.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\drying\drying-rack-assemble.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\drying\drying-rack-mutton.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\drying\drying-rack-porkchops.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\drying\drying-rack.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\drying\dryingmat.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\flora\palmfrond.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\flora\palmfruits.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\flora\palmlog.json" />
@@ -1714,11 +1749,15 @@
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\branch-cross.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\branch.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\chest.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\chestcomplete-bamboo.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\chestcomplete.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\chestframe.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\chestlatched-bamboo.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\chestlatched.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\chestsides-bamboo.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\chestsides.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\labeledchest.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\labeledchestcomplete-bamboo.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\chest\labeledchestcomplete.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\doors\browndoor.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\doors\door-assemble-bamboo.json" />
@@ -1733,6 +1772,7 @@
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\doors\dooroak.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\doors\doorpine.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\doors\greendoor.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\wood\firepit-flatstone.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\furniture\chair.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\furniture\table.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\halflog.json" />
@@ -1743,6 +1783,7 @@
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\lamppost\post.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\logwall\logwall.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\panel-bamboo.json" />
+    <None Include="bin\Immersion\assets\immersion\blocktypes\wood\panel-planks.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\panel.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\planks-bamboo.json" />
     <None Include="bin\Immersion\assets\immersion\blocktypes\wood\primitivefence.json" />
@@ -1754,6 +1795,7 @@
     <None Include="bin\Immersion\assets\immersion\itemtypes\food\chicken.json" />
     <None Include="bin\Immersion\assets\immersion\itemtypes\food\hare.json" />
     <None Include="bin\Immersion\assets\immersion\itemtypes\food\mutton.json" />
+    <None Include="bin\Immersion\assets\immersion\itemtypes\food\pemmican-sausage.json" />
     <None Include="bin\Immersion\assets\immersion\itemtypes\food\porkchops.json" />
     <None Include="bin\Immersion\assets\immersion\itemtypes\resource\animal.json" />
     <None Include="bin\Immersion\assets\immersion\itemtypes\resource\bowlimb.json" />
@@ -1993,6 +2035,7 @@
     <None Include="bin\Immersion\assets\immersion\shapes\block\road\road-fish.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\road\road-flat.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\road\road-largesquare.json" />
+    <None Include="bin\Immersion\assets\immersion\shapes\block\road\road-lod.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\road\road-squares.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\road\road-stepping1.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\road\road-stepping2.json" />
@@ -2043,6 +2086,8 @@
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\branch8-cordage.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\chest.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\chest\chest-assemble.json" />
+    <None Include="bin\Immersion\assets\immersion\shapes\block\wood\chest\chest-assemble1.json" />
+    <None Include="bin\Immersion\assets\immersion\shapes\block\wood\chest\normal.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\cordage.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\door\door-assemble.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\door\down_closed_left.json" />
@@ -2054,12 +2099,16 @@
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\door\up_closed_right.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\door\up_opened_left.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\door\up_opened_right.json" />
+    <None Include="bin\Immersion\assets\immersion\shapes\block\wood\drying-rack\mutton.json" />
+    <None Include="bin\Immersion\assets\immersion\shapes\block\wood\drying-rack\pork.json" />
+    <None Include="bin\Immersion\assets\immersion\shapes\block\wood\drying-rack\redmeat.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\fence\primitivefence-midsection.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\fence\primitivefence-support.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\fence\primitivegate-closed-left.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\fence\primitivegate-closed-right.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\fence\primitivegate-opened-left.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\fence\primitivegate-opened-right.json" />
+    <None Include="bin\Immersion\assets\immersion\shapes\block\wood\firepit\lit-normal-flatstone-bread.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\furniture\chair-bamboo.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\furniture\chair.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\block\wood\furniture\table-bamboo.json" />
@@ -2099,7 +2148,9 @@
     <None Include="bin\Immersion\assets\immersion\shapes\item\food\meat\chicken.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\item\food\meat\hare.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\item\food\meat\mutton.json" />
+    <None Include="bin\Immersion\assets\immersion\shapes\item\food\meat\mutton2.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\item\food\meat\porkchops.json" />
+    <None Include="bin\Immersion\assets\immersion\shapes\item\food\meat\porkchops2.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\item\resource\stonebrick.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\item\tool\roadwork\settinghammer.json" />
     <None Include="bin\Immersion\assets\immersion\shapes\item\tool\roadwork\settinghammerhead.json" />
@@ -3226,6 +3277,12 @@
     <Content Include="bin\Immersion\assets\immersion\textures\entity\wolf\silver.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\entity\wolf\smokegrey.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\entity\wolf\white.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\dryfruit\blackcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\dryfruit\blueberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\dryfruit\cranberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\dryfruit\redcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\dryfruit\saguaro.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\dryfruit\whitecurrant.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\food\meat\carnivoremeat-cooked.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\food\meat\carnivoremeat-cured.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\food\meat\carnivoremeat-raw.png" />
@@ -3241,9 +3298,19 @@
     <Content Include="bin\Immersion\assets\immersion\textures\item\food\meat\porkchops-cooked.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\food\meat\porkchops-cured.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\food\meat\porkchops-raw.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\pemmican\flax.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\pemmican\meat-flour.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\pemmican\meat-fruit.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\pemmican\meat-fruitfat.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\pemmican\pemmican.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\sausage\cookedsausage.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\food\sausage\rawsausage.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\resource\animal\casings.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\resource\animal\cleanintestines.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\resource\animal\fangs.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\resource\animal\furitem.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\resource\animal\horn.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\item\resource\animal\intestines.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\resource\animal\large-bone.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\resource\animal\leatherstrips.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\item\resource\animal\small-bones.png" />
