--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -39,36 +39,36 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="cairo-sharp">
-      <HintPath>..\Vintagestory1.12.x\Lib\cairo-sharp.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\cairo-sharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="CommandLine">
-      <HintPath>..\Vintagestory1.12.x\Lib\CommandLine.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\CommandLine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="csogg">
-      <HintPath>..\Vintagestory1.12.x\Lib\csogg.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\csogg.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="csvorbis">
-      <HintPath>..\Vintagestory1.12.x\Lib\csvorbis.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\csvorbis.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ENet">
-      <HintPath>..\Vintagestory1.12.x\Lib\ENet.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\ENet.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Vintagestory1.12.x\Lib\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="OpenTK">
-      <HintPath>..\Vintagestory1.12.x\Lib\OpenTK.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\OpenTK.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="protobuf-net">
-      <HintPath>..\Vintagestory1.12.x\Lib\protobuf-net.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\protobuf-net.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -80,7 +80,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Tavis.JsonPatch">
-      <HintPath>..\Vintagestory1.12.x\Lib\Tavis.JsonPatch.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\Tavis.JsonPatch.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VintagestoryAPI">
@@ -96,19 +96,19 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="VSCreativeMod">
-      <HintPath>..\Vintagestory1.12.x\Mods\VSCreativeMod.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Mods\VSCreativeMod.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VSEssentials">
-      <HintPath>..\Vintagestory1.12.x\Mods\VSEssentials.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Mods\VSEssentials.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VSSurvivalMod">
-      <HintPath>..\Vintagestory1.12.x\Mods\VSSurvivalMod.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Mods\VSSurvivalMod.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="websocket-sharp">
-      <HintPath>..\Vintagestory1.12.x\Lib\websocket-sharp.dll</HintPath>
+      <HintPath>..\..\VS-1.12-X\Lib\websocket-sharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -235,6 +235,7 @@
     <Folder Include="bin\Immersion\assets\immersion\textures\block\stone\roads\roman\" />
     <Folder Include="bin\Immersion\assets\immersion\textures\block\stone\roads\stones\" />
     <Folder Include="bin\Totems\assets\totems\recipes\clayforming\" />
+    <Folder Include="Source\Content\Entity\" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitattributes" />
