transient fixes, palm fixes, palm sapling

--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -173,15 +173,15 @@
     <Compile Include="Source\Content\Utility\HandAnimations.cs" />
     <Compile Include="Source\Content\Utility\LevenshteinDistance.cs" />
     <Compile Include="Source\Content\Utility\Missing.cs" />
-    <Compile Include="Source\Content\WorldGen\GenDeepOreBits.cs" />
-    <Compile Include="Source\Content\WorldGen\GenAquifers.cs" />
-    <Compile Include="Source\Content\WorldGen\ModifyLakes.cs" />
+    <Compile Include="Source\Systems\WorldGen\GenDeepOreBits.cs" />
+    <Compile Include="Source\Systems\WorldGen\GenAquifers.cs" />
+    <Compile Include="Source\Systems\WorldGen\ModifyLakes.cs" />
     <Compile Include="Source\Debugging\RedirectLogs.cs" />
     <Compile Include="Source\Content\BlockEntities\BEPalmTree.cs" />
     <Compile Include="Source\Content\Block\BlockPalmTree.cs" />
     <Compile Include="Source\Systems\InWorldCraftingSystem.cs" />
     <Compile Include="Source\Systems\LootVesselFix.cs" />
-    <Compile Include="Source\Content\WorldGen\GenPalms.cs" />
+    <Compile Include="Source\Systems\WorldGen\GenPalms.cs" />
     <Compile Include="Source\Systems\Remapper.cs" />
     <Compile Include="Source\Systems\ReturnBlockTest.cs" />
     <Compile Include="Source\ImmersionSystem.cs" />
