fixing broken trader goods, Fixed fox baby as companion.

--- a/bin/Immersion/assets/game/entities/humanoid/trader-treasurehunter.json
+++ b/bin/Immersion/assets/game/entities/humanoid/trader-treasurehunter.json
@@ -656,8 +656,8 @@
             },
             {
                 "name": "Backpack",
-                "code": "backpack",
-                "type": "item",
+                "code": "immersion:backpack",
+                "type": "block",
                 "stacksize": 2,
                 "stock": {
                     "avg": 5,
