removed Vanilla Stone tools and heads

--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -511,12 +511,18 @@
     <None Include="bin\Immersion\assets\game\itemtypes\resource\shingle.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\resource\sisal-leaves.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\resource\wheyportion.json" />
+    <None Include="bin\Immersion\assets\game\itemtypes\toolhead\axehead.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\toolhead\bonearrowhead.json" />
+    <None Include="bin\Immersion\assets\game\itemtypes\toolhead\hoehead.json" />
+    <None Include="bin\Immersion\assets\game\itemtypes\toolhead\knifeblade.json" />
+    <None Include="bin\Immersion\assets\game\itemtypes\toolhead\shovelhead.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\toolhead\spearhead.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\axe-metal.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\axe-stone.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\bow.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\firestarter.json" />
+    <None Include="bin\Immersion\assets\game\itemtypes\tool\hoe.json" />
+    <None Include="bin\Immersion\assets\game\itemtypes\tool\knife.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\neolithic\adze.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\neolithic\arrow-primitive.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\neolithic\axe.json" />
@@ -532,7 +538,9 @@
     <None Include="bin\Immersion\assets\game\itemtypes\tool\neolithic\slaughteringaxe.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\neolithic\spear-primitive.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\neolithic\sword.json" />
+    <None Include="bin\Immersion\assets\game\itemtypes\tool\shovel.json" />
     <None Include="bin\Immersion\assets\game\itemtypes\tool\slaughteringaxe.json" />
+    <None Include="bin\Immersion\assets\game\itemtypes\tool\spear.json" />
     <None Include="bin\Immersion\assets\game\lang\en.json" />
     <None Include="bin\Immersion\assets\game\patches\entities.json" />
     <None Include="bin\Immersion\assets\game\patches\survival-config-general.json" />
