--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -3170,6 +3170,12 @@
     <Content Include="bin\Immersion\assets\immersion\textures\entity\chicken\rooster\savanna.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\entity\chicken\rooster\white.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\entity\chicken\rooster\woodland.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\entity\fox\arctic-female.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\entity\fox\arctic-male.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\entity\fox\arctic-pup.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\entity\fox\forest-female.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\entity\fox\forest-male.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\entity\fox\forest-pup.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\entity\hyena\wild-female-brown.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\entity\hyena\wild-female-tan.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\entity\hyena\wild-male.png" />
